# mirai-project

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  NORMS  NORMS.md  README  README.md  TODO  license.txt  miraiProjectDoxygenConfig  mirai_project.cbp  mirai_project.h
cmake/: config.cmake  genrev.cmake  options.cmake
cmake/macros/: clang-settings.cmake  gcc-settings.cmake  unix.cmake  windows.cmake
examples/: CMakeLists.txt
examples/animatedSprite/: CMakeLists.txt  README.md
examples/animatedSprite/src/: main.cpp
examples/animated_sprite/: CMakeLists.txt
examples/animated_sprite/src/: main.cpp
examples/archivedResManager/: CMakeLists.txt  README.md
examples/archivedResManager/src/: main.cpp
examples/archiver/: CMakeLists.txt  README.md
examples/archiver/src/: main.cpp
examples/encryptedResManager/: CMakeLists.txt  README.md
examples/encryptedResManager/src/: main.cpp
examples/encryption/: CMakeLists.txt  README.md
examples/encryption/src/: main.cpp
examples/eventManager/: CMakeLists.txt
examples/eventManager/src/: Entity.cpp  Entity.hpp  EventsTypes.hpp  Monster.cpp  Monster.hpp  Player.cpp  Player.hpp  main.cpp
examples/gui/: CMakeLists.txt
examples/gui/src/: main.cpp
examples/logger/: CMakeLists.txt  README.md
examples/logger/src/: main.cpp
examples/nodes/: CMakeLists.txt  README.md
examples/nodes/src/: NodeCircle.cpp  NodeCircle.hpp  main.cpp
examples/parser/: CMakeLists.txt  README.md
examples/parser/resources/: clearConfig.txt
examples/parser/ressources/: config.txt
examples/parser/src/: main.cpp
examples/playerControl/: CMakeLists.txt  README.md
examples/playerControl/src/: character.cpp  character.hpp  main.cpp
examples/simpleWindow/: CMakeLists.txt  README.md
examples/simpleWindow/src/: main.cpp
examples/simple_window/: CMakeLists.txt
examples/update/src/: main.cpp
examples/updateSystem/: CMakeLists.txt  README.md
examples/updateSystem/src/: main.cpp
include/: Config.hpp  broadcasting.hpp
include/General/: Encryption.hpp  log.hpp  string_functions.hpp  string_functions.tpp
include/MiraiProject/animations/: AnimatedSprite.hpp  Animation.hpp
include/MiraiProject/encryption/: Encryption.hpp  basic.hpp  encrypt_functions.hpp
include/MiraiProject/eventManager/: EventManager.hpp  EventManager.tpp
include/MiraiProject/gui/: Bar.hpp  Border.hpp  Button.hpp  CheckBox.hpp  ClickableWidget.hpp  Image.hpp  Label.hpp  TextBox.hpp  TrackBar.hpp  Widget.hpp
include/MiraiProject/gui/priv/: Cursor.hpp
include/MiraiProject/inputManager/: Binding.hpp  KeyboardManager.hpp  MouseManager.hpp
include/MiraiProject/parser/: Parser.hpp  Parser.tpp  TimeParser.hpp
include/MiraiProject/resourcesManagers/: ArchivedResManager.hpp  AutoResManager.hpp  BaseResManager.hpp  EncryptedResManager.hpp
include/MiraiProject/scene/: Node.hpp  SceneNode.hpp
include/MiraiProject/stat/: BaseStat.hpp  ModifiedStat.hpp  VitalStat.hpp
include/MiraiProject/update/: UpdateModule.hpp
include/MiraiProject/updateSystem/: Updatable.hpp  UpdateModule.hpp
include/MiraiProject/util/: Archiver.hpp  FilesUtilities.hpp  LogStream.hpp  Logger.hpp  Logger.tpp  MPLogger.hpp  MultiStream.hpp  Random.hpp  Random.tpp  StringUtilities.hpp  StringUtilities.tpp  TransformableUtilities.hpp  WindowManager.hpp  files_functions.hpp  log.hpp  random.hpp  random.tpp  string_functions.hpp  string_functions.tpp
include/encryption/: Encryption.hpp  crypt_function.hpp
include/resourcesManagers/: AutoResManager.hpp
include/util/: Encryption.hpp  ResourcesManager.hpp  WindowManager.hpp  log.hpp  string_functions.hpp
include/util/ResourcesManagers/: AutoResManager.hpp  BaseResManager.hpp  ResManager.hpp
src/: CMakeLists.txt  broadcasting.cpp  mirai_project.cpp
src/General/: Encryption.cpp  log.cpp  string_functions.cpp
src/animations/: AnimatedSprite.cpp  Animation.cpp
src/encryption/: Encryption.cpp  basic.cpp  crypt_functions.cpp  encrypt_functions.cpp
src/eventManager/: EventManager.cpp
src/gui/: Bar.cpp  Border.cpp  Button.cpp  CheckBox.cpp  ClickableWidget.cpp  Image.cpp  Label.cpp  TextBox.cpp  TrackBar.cpp  Widget.cpp
src/gui/priv/: Cursor.cpp
src/inputManager/: Binding.cpp  KeyboardManager.cpp  MouseManager.cpp
src/parser/: Parser.cpp  TimeParser.cpp
src/resourcesManagers/: ArchivedResManager.cpp  AutoResManager.cpp  BaseResManager.cpp  EncryptedResManager.cpp
src/scene/: Node.cpp  SceneNode.cpp
src/stat/: BaseStat.cpp  ModifiedStat.cpp  VitalStat.cpp
src/update/: Updatable.cpp  UpdateModule.cpp
src/updateSystem/: Updatable.cpp  UpdateModule.cpp
src/util/: Archiver.cpp  Encryption.cpp  FilesUtilities.cpp  LogStream.cpp  Logger.cpp  MPLogger.cpp  MultiStream.cpp  ResourcesManager.cpp  StringUtilities.cpp  TransformableUtilities.cpp  WindowManager.cpp  file_functions.cpp  files_functions.cpp  log.cpp  string_functions.cpp
src/util/ResourcesManagers/: AutoResManager.cpp  BaseResManager.cpp  ResManager.cpp
tools/: CMakeLists.txt
tools/encryption/: CMakeLists.txt  README  README.md
tools/encryption/include/: encryption.hpp
tools/encryption/src/: encryption.cpp  encryption.hpp  main.cpp
